--- a/src/app/profiles/service-profiles/service-profiles-list/service-profile-item/service-profile-item.component.html
+++ b/src/app/profiles/service-profiles/service-profiles-list/service-profile-item/service-profile-item.component.html
@@ -7,9 +7,9 @@
     </div>
     <div class="col-3 pull-right d-flex align-items-center justify-content-end">
       <a (click)="onDeleteServiceProfile()">
-        <div class="text-center m-2">
-          <fa-icon [icon]="faTimesCircle"></fa-icon>
-          <p>Slet</p>
+        <div class="text-center mr-2">
+          <fa-icon [icon]="faTimesCircle" class="icon--small"></fa-icon>
+          <p class="label label--icon">Slet</p>
         </div>
       </a>
     </div>
