--- a/src/app/navbar/sigfox-dropdown/sigfox-dropdown.component.html
+++ b/src/app/navbar/sigfox-dropdown/sigfox-dropdown.component.html
@@ -1,7 +1,7 @@
 <mat-expansion-panel class="mb-5">
     <mat-expansion-panel-header>
         <mat-panel-title class="nav-item py-2">
-            <p class="nav-item ml-2">{{'NAV.SGIFOX' | translate}}</p>
+            <p class="nav-item ml-2">{{'NAV.SIGFOX' | translate}}</p>
         </mat-panel-title>
         <mat-panel-description></mat-panel-description>
     </mat-expansion-panel-header>
