--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -23,6 +23,8 @@ $screen-xxl-min: 1400px;
 //############################### Font and Font sizes ####################
 //###########################################################################
 
+$font-name: 'Roboto' !default;
+
 //----------------
 // -to-rem
 //----------------
@@ -57,7 +59,7 @@ Removes the unit (e.g. px, em, rem) from a value, returning the number only.
 // Paths
 // Relative font and image file paths
 $font-path: '../fonts/Roboto/' !default;
-$image-path: '../img' !default;
+$image-path: '../images/' !default;
 $node-modules-path: '../../../node_modules';
 $icons-folder-path: "../img/svg-icons/" !default;
 
@@ -218,7 +220,7 @@ $color-active: $color-green-001 !default;
 $color-text: $color-black-001 !default;
 $color-text-primary: $color-primary !default;
 $color-text-secondary: $color-secondary !default;
-$color-text-light: $color-black-002 !default;
+$color-text-light: $color-grey-003 !default;
 $color-text-white: $color-white-001 !default;
 $color-text-blue: $color-blue-001 !default;
 $color-text-yellow: $color-yellow-001 !default;
@@ -243,6 +245,7 @@ $color-Icons-primary: $color-primary !default;
 $color-Icons-secondary: $color-secondary !default;
 $color-Icons-alternative: $color-alternative !default;
 $color-Icons-light: $color-light-green-001 !default;
+$color-icon-label: $color-text-light !default;
 
 // //Links color
 $color-link: $color-primary !default;
