--- a/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
+++ b/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
@@ -196,40 +196,44 @@
         <h3>{{'IOTDEVICE.SIGFOXSETUP' | translate}}</h3>
       </div>
       <div class="form-group mt-3 col-12">
-        <mat-slide-toggle [(ngModel)]="iotDevice.sigfoxSettings.registeredAtSigfox" id="registeredAtSigfox" name="registeredAtSigfox">
-          {{'QUESTION.SIGFOX.REGISTEREDATSIGFOX' | translate}}</mat-slide-toggle>
+        <mat-slide-toggle [(ngModel)]="iotDevice.sigfoxSettings.alreadyRegistered" id="alreadyRegistered" name="registeredAtSigfox">
+          {{'QUESTION.SIGFOX.ALREADYREGISTERED' | translate}}</mat-slide-toggle>
       </div>
-      <div *ngIf="!iotDevice.sigfoxSettings.registeredAtSigfox">
+      <div *ngIf="!iotDevice.sigfoxSettings.alreadyRegistered">
         <div class="form-group mt-3 col-12">
-          <label class="form-label" for="sigfoxgruppeId">{{'QUESTION.SIGFOX.SIGFOXGRUPPEID' | translate}}*</label>
-            <select id="sigfoxgruppeId" class="form-select" name="sigfoxgruppeId"
-              [(ngModel)]="iotDevice.sigfoxSettings.sigfoxgruppeId" required
-              [value]="iotDevice.sigfoxSettings.sigfoxgruppeId"
-              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('sigfoxgruppeId'), 'is-valid' : formFailedSubmit && !errorFields.includes('sigfoxgruppeId')}">
+          <label class="form-label" for="groupId">{{'QUESTION.SIGFOX.GROUPID' | translate}}*</label>
+            <select id="groupId" class="form-select" name="groupId"
+              [(ngModel)]="iotDevice.sigfoxSettings.groupId" required
+              [value]="iotDevice.sigfoxSettings.groupId"
+              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('groupId'), 'is-valid' : formFailedSubmit && !errorFields.includes('groupId')}">
               <option *ngFor="let serviceProfile of serviceProfiles" [value]="serviceProfile.id">
                 {{serviceProfile.name}}
               </option>
             </select>
         </div>
         <div class="form-group mt-3 col-12">
-          <label class="form-label" for="sigfoxIdentifier">{{'QUESTION.SIGFOX.SIGFOXIDENTIFIER' | translate}}*</label>
-          <input type="text" id="sigfoxIdentifier" name="sigfoxIdentifier" maxLength="16"
-            [placeholder]="'QUESTION.SIGFOX.SIGFOXIDENTIFIER-PLACEHOLDER' | translate" class="form-control"
-            [(ngModel)]="iotDevice.sigfoxSettings.sigfoxIdentifier"
-            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('sigfoxIdentifier'), 'is-valid' : formFailedSubmit && !errorFields.includes('sigfoxIdentifier')}">
+          <label class="form-label" for="deviceTypeId">{{'QUESTION.SIGFOX.DEVICETYPEID' | translate}}*</label>
+          <select id="deviceTypeId" class="form-select" name="deviceTypeId"
+              [(ngModel)]="iotDevice.sigfoxSettings.deviceTypeId" required
+              [value]="iotDevice.sigfoxSettings.deviceTypeId"
+              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('deviceTypeId'), 'is-valid' : formFailedSubmit && !errorFields.includes('deviceTypeId')}">
+              <option *ngFor="let serviceProfile of serviceProfiles" [value]="serviceProfile.id">
+                {{serviceProfile.name}}
+              </option>
+            </select>
         </div>
         <div class="form-group mt-3 col-12">
-          <label class="form-label" for="PAC">{{'QUESTION.SIGFOX.PAC' | translate}}*</label>
-          <input type="text" id="PAC" name="PAC" maxLength="16"
+          <label class="form-label" for="pac">{{'QUESTION.SIGFOX.PAC' | translate}}*</label>
+          <input type="text" id="pac" name="pac" maxLength="16"
             [placeholder]="'QUESTION.SIGFOX.PAC-PLACEHOLDER' | translate" class="form-control"
-            [(ngModel)]="iotDevice.sigfoxSettings.PAC"
-            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('PAC'), 'is-valid' : formFailedSubmit && !errorFields.includes('PAC')}">
+            [(ngModel)]="iotDevice.sigfoxSettings.pac"
+            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('pac'), 'is-valid' : formFailedSubmit && !errorFields.includes('pac')}">
         </div>
         <div class="form-group mt-3 col-12">
-          <label class="form-label" for="productLicens">{{'QUESTION.SIGFOX.PRODUCTLICENS' | translate}}*</label>
-          <input type="text" id="productLicens" name="productLicens" maxLength="16"
-            [placeholder]="'QUESTION.SIGFOX.PRODUCTLICENS-PLACEHOLDER' | translate" class="form-control"
-            [(ngModel)]="iotDevice.sigfoxSettings.productLicens"
+          <label class="form-label" for="endProductCertificate">{{'QUESTION.SIGFOX.ENDPRODUCTCERTIFICATE' | translate}}*</label>
+          <input type="text" id="endProductCertificate" name="endProductCertificate" maxLength="16"
+            [placeholder]="'QUESTION.SIGFOX.ENDPRODUCTCERTIFICATE-PLACEHOLDER' | translate" class="form-control"
+            [(ngModel)]="iotDevice.sigfoxSettings.endProductCertificate"
             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('productLicens'), 'is-valid' : formFailedSubmit && !errorFields.includes('productLicens')}">
         </div>
         <div class="form-group mt-3 col-12">
@@ -237,13 +241,13 @@
             {{'QUESTION.SIGFOX.PROTOTYPE' | translate}}</mat-slide-toggle>
         </div>
       </div>
-      <div *ngIf="iotDevice.sigfoxSettings.registeredAtSigfox">
+      <div *ngIf="iotDevice.sigfoxSettings.alreadyRegistered">
         <div class="form-group mt-3 col-12">
-          <label class="form-label" for="sigfoxEnhedId">{{'QUESTION.SIGFOX.SIGFOXENHEDID' | translate}}*</label>
-            <select id="sigfoxEnhedId" class="form-select" name="sigfoxEnhedId"
-              [(ngModel)]="iotDevice.sigfoxSettings.sigfoxEnhedId" required
-              [value]="iotDevice.sigfoxSettings.sigfoxEnhedId"
-              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('sigfoxEnhedId'), 'is-valid' : formFailedSubmit && !errorFields.includes('sigfoxEnhedId')}">
+          <label class="form-label" for="deviceId">{{'QUESTION.SIGFOX.DEVICEID' | translate}}*</label>
+            <select id="deviceId" class="form-select" name="deviceId"
+              [(ngModel)]="iotDevice.sigfoxSettings.deviceId" required
+              [value]="iotDevice.sigfoxSettings.deviceId"
+              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('deviceId'), 'is-valid' : formFailedSubmit && !errorFields.includes('deviceId')}">
               <option *ngFor="let serviceProfile of serviceProfiles" [value]="serviceProfile.id">
                 {{serviceProfile.name}}
               </option>
