--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -46,10 +46,12 @@
   }
 
   height: 85vh;
-  background-image: linear-gradient(to right bottom,
-    rgba($color-primary, 0.8),
-    rgba($color-orange-004, 0.8)),
-  url(../../assets/images/hero.jpg);
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($color-primary, 0.8),
+      rgba($color-orange-004, 0.8)
+    ),
+    url(../../assets/images/hero.jpg);
   background-size: cover;
   background-position: top;
   position: relative;
@@ -57,7 +59,7 @@
   @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-    height: 95vh;
+    height: 90vh;
   }
 
   //   @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em),
@@ -78,8 +80,8 @@
 
   &__logo-box {
     position: absolute;
-    top: 4rem;
-    left: 4rem;
+    bottom: 5vh;
+    right: 5rem;
   }
 
   &__logo {
