--- a/src/app/sigfox/sigfox-administration/sigfox-administration-list/sigfox-administration-list.component.html
+++ b/src/app/sigfox/sigfox-administration/sigfox-administration-list/sigfox-administration-list.component.html
@@ -3,7 +3,7 @@
 <div class=" jumbotron m-md-4 p-md-3">
     <div class="row mt-5">
         <div class="col-6">
-            <h4>SigFox Administration</h4>
+            <h4>Liste over grupper</h4>
         </div>
         <div class="col-6">
             <button class="btn btn-primary float-right"
@@ -13,9 +13,7 @@
     <hr>
     <div class="row">
         <div class="col-xs-12">
-            <app-sigfox-administration-item 
-                *ngFor="let group of sigfoxGroups; let i = index"
-                [sigfoxGroup]="group">
+            <app-sigfox-administration-item *ngFor="let group of sigfoxGroups; let i = index" [sigfoxGroup]="group">
             </app-sigfox-administration-item>
         </div>
     </div>
