--- a/src/assets/scss/elements/_img.scss
+++ b/src/assets/scss/elements/_img.scss
@@ -1,8 +1,11 @@
 .img-logo {
   background-color: transparent;
-  height: 100px;
+  width: 50px;
   margin-top: 15px;
-  width: 100px;
+
+  @media(min-width: $screen-md-min) {
+    width: 100px;
+  }
 }
 
 @mixin img-cover($url) {
