--- a/src/app/applications/iot-devices/iot-device-edit/sigfox-device-edit/sigfox-device-edit.component.html
+++ b/src/app/applications/iot-devices/iot-device-edit/sigfox-device-edit/sigfox-device-edit.component.html
@@ -1,64 +1,74 @@
 <form>
     <div class="row mb-5">
-        <h3>{{'IOTDEVICE.SIGFOXSETUP' | translate}}</h3>
+        <h3>{{'QUESTION.SIGFOX.TITLE' | translate}}</h3>
       </div>
       <div class="form-group mt-3 col-12">
-        <mat-slide-toggle [(ngModel)]="iotDevice.sigfoxSettings.alreadyRegistered" id="alreadyRegistered" name="registeredAtSigfox">
-          {{'QUESTION.SIGFOX.ALREADYREGISTERED' | translate}}</mat-slide-toggle>
+        <label class="form-label" for="groupId">{{'QUESTION.SIGFOX.GROUPID' | translate}}*</label>
+          <select id="groupId" class="form-select" name="groupId"
+            [(ngModel)]="iotDevice.sigfoxSettings.groupId" required
+            [value]="iotDevice.sigfoxSettings.groupId"
+            (change)="changeContractAndDeviceType()"
+            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('groupId'), 'is-valid' : formFailedSubmit && !errorFields.includes('groupId')}">
+            <option *ngFor="let group of sigfoxGroups" [value]="group.id">
+              {{group.name}}
+            </option>
+          </select>
       </div>
-      <div *ngIf="!iotDevice.sigfoxSettings.alreadyRegistered">
+      <div *ngIf="iotDevice.sigfoxSettings.groupId">
         <div class="form-group mt-3 col-12">
-          <label class="form-label" for="groupId">{{'QUESTION.SIGFOX.GROUPID' | translate}}*</label>
-            <select id="groupId" class="form-select" name="groupId"
-              [(ngModel)]="iotDevice.sigfoxSettings.groupId" required
-              [value]="iotDevice.sigfoxSettings.groupId"
-              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('groupId'), 'is-valid' : formFailedSubmit && !errorFields.includes('groupId')}">
-              <option *ngFor="let element of sigfoxGroups" [value]="element.id">
-                {{element.name}}
-              </option>
-            </select>
+          <mat-slide-toggle [(ngModel)]="iotDevice.sigfoxSettings.alreadyRegistered" id="alreadyRegistered" name="registeredAtSigfox">
+            {{'QUESTION.SIGFOX.ALREADYREGISTERED' | translate}}</mat-slide-toggle>
         </div>
-        <div class="form-group mt-3 col-12">
-          <label class="form-label" for="deviceTypeId">{{'QUESTION.SIGFOX.DEVICETYPEID' | translate}}*</label>
-          <select id="deviceTypeId" class="form-select" name="deviceTypeId"
+        <div *ngIf="!iotDevice.sigfoxSettings.alreadyRegistered">
+          <div class="form-group mt-3 col-12">
+            <label class="form-label" for="deviceTypeId">{{'QUESTION.SIGFOX.DEVICETYPEID' | translate}}*</label>
+            <select id="deviceTypeId" class="form-select" name="deviceTypeId"
               [(ngModel)]="iotDevice.sigfoxSettings.deviceTypeId" required
               [value]="iotDevice.sigfoxSettings.deviceTypeId"
               [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('deviceTypeId'), 'is-valid' : formFailedSubmit && !errorFields.includes('deviceTypeId')}">
-              <option *ngFor="let element of sigfoxGroups" [value]="element.id">
-                {{element.name}}
+              <option *ngFor="let deviceType of sigfoxDeviceTypes" [value]="deviceType.id">
+                {{deviceType.name}}
               </option>
             </select>
+          </div>
+          <div class="form-group mt-3 col-12">
+            <label class="form-label" for="endProductCertificate">{{'QUESTION.SIGFOX.ENDPRODUCTCERTIFICATE' | translate}}*</label>
+            <select id="endProductCertificate" class="form-select" name="endProductCertificate"
+              [(ngModel)]="iotDevice.sigfoxSettings.endProductCertificate" required
+              [value]="iotDevice.sigfoxSettings.endProductCertificate"
+              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('endProductCertificate'), 'is-valid' : formFailedSubmit && !errorFields.includes('endProductCertificate')}">
+              <option *ngFor="let contract of sigfoxContract" [value]="contract.id">
+                {{contract.name}}
+              </option>
+            </select>
+          </div>
+          <div class="form-group mt-3 col-12">
+            <label class="form-label" for="pac">{{'QUESTION.SIGFOX.PAC' | translate}}*</label>
+            <input type="text" id="pac" name="pac" maxLength="16"
+              [placeholder]="'QUESTION.SIGFOX.PAC-PLACEHOLDER' | translate" class="form-control"
+              [(ngModel)]="iotDevice.sigfoxSettings.pac"
+              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('pac'), 'is-valid' : formFailedSubmit && !errorFields.includes('pac')}">
+          </div>
         </div>
-        <div class="form-group mt-3 col-12">
-          <label class="form-label" for="pac">{{'QUESTION.SIGFOX.PAC' | translate}}*</label>
-          <input type="text" id="pac" name="pac" maxLength="16"
-            [placeholder]="'QUESTION.SIGFOX.PAC-PLACEHOLDER' | translate" class="form-control"
-            [(ngModel)]="iotDevice.sigfoxSettings.pac"
-            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('pac'), 'is-valid' : formFailedSubmit && !errorFields.includes('pac')}">
-        </div>
-        <div class="form-group mt-3 col-12">
-          <label class="form-label" for="endProductCertificate">{{'QUESTION.SIGFOX.ENDPRODUCTCERTIFICATE' | translate}}*</label>
-          <input type="text" id="endProductCertificate" name="endProductCertificate" maxLength="16"
-            [placeholder]="'QUESTION.SIGFOX.ENDPRODUCTCERTIFICATE-PLACEHOLDER' | translate" class="form-control"
-            [(ngModel)]="iotDevice.sigfoxSettings.endProductCertificate"
-            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('productLicens'), 'is-valid' : formFailedSubmit && !errorFields.includes('productLicens')}">
+        <div *ngIf="iotDevice.sigfoxSettings.alreadyRegistered">
+          <div class="form-group mt-3 col-12">
+            <label class="form-label" for="deviceId">{{'QUESTION.SIGFOX.DEVICEID' | translate}}*</label>
+              <select id="deviceId" class="form-select" name="deviceId"
+                [(ngModel)]="iotDevice.sigfoxSettings.deviceId" required
+                [value]="iotDevice.sigfoxSettings.deviceId"
+                [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('deviceId'), 'is-valid' : formFailedSubmit && !errorFields.includes('deviceId')}">
+                <option *ngFor="let element of sigfoxGroups" [value]="element.id">
+                  {{element.name}}
+                </option>
+              </select>
+          </div>  
         </div>
         <div class="form-group mt-3 col-12">
           <mat-slide-toggle [(ngModel)]="iotDevice.sigfoxSettings.prototype" id="prototype" name="prototype">
             {{'QUESTION.SIGFOX.PROTOTYPE' | translate}}</mat-slide-toggle>
         </div>
       </div>
-      <div *ngIf="iotDevice.sigfoxSettings.alreadyRegistered">
-        <div class="form-group mt-3 col-12">
-          <label class="form-label" for="deviceId">{{'QUESTION.SIGFOX.DEVICEID' | translate}}*</label>
-            <select id="deviceId" class="form-select" name="deviceId"
-              [(ngModel)]="iotDevice.sigfoxSettings.deviceId" required
-              [value]="iotDevice.sigfoxSettings.deviceId"
-              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('deviceId'), 'is-valid' : formFailedSubmit && !errorFields.includes('deviceId')}">
-              <option *ngFor="let element of sigfoxGroups" [value]="element.id">
-                {{element.name}}
-              </option>
-            </select>
-        </div>  
-    </div>
+      <div *ngIf="!iotDevice.sigfoxSettings.groupId">
+        <h3>{{'QUESTION.SIGFOX.SELECTGROUPFIRST' | translate}}</h3>
+      </div>
 </form>
