--- a/src/app/sigfox/sigfox-administration/sigfox-administration-edit/sigfox-administration-edit.component.html
+++ b/src/app/sigfox/sigfox-administration/sigfox-administration-edit/sigfox-administration-edit.component.html
@@ -21,12 +21,14 @@
             <mat-divider class="my-5"></mat-divider>
             <div class="form-group col-8">
                 <label for="username">SigFox login</label>
-                <input type="username" id="username" class="form-control" ngModel name="username" required
+                <input type="username" id="username" class="form-control" name="username" required
+                    [(ngModel)]="sigfoxGroup.username"
                     [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('username'), 'is-valid' : formFailedSubmit && !errorFields.includes('username')}">
             </div>
             <div class="form-group col-8">
                 <label for="password">Kode</label>
                 <input type="password" id="password" class="form-control" ngModel name="password" required
+                    [(ngModel)]="sigfoxGroup.password"
                     [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('password'), 'is-valid' : formFailedSubmit && !errorFields.includes('password')}">
             </div>
             <div class="mt-5">
