--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@
 
 //Components
 @import 'assets/scss/components/boxes';
+@import 'assets/scss/components/bulk-import';
 @import 'assets/scss/components/forms';
 @import 'assets/scss/components/loading-spinner';
 @import 'assets/scss/components/navbar';
