IOT-53 refaktor, fixes

--- a/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
+++ b/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
@@ -60,7 +60,7 @@
           [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
       </div>
   
-      <div class="form-group mt-3 col-12">
+      <div class="form-group mt-3 col-12" *ngIf="application">
         <label class="form-label" for="applicationId">{{'QUESTION.RELATION-APPLICATION' | translate}}</label>
           {{application.name}}
       </div>
