--- a/src/app/applications/iot-devices/iot-device-edit/sigfox-device-edit/sigfox-device-edit.component.html
+++ b/src/app/applications/iot-devices/iot-device-edit/sigfox-device-edit/sigfox-device-edit.component.html
@@ -24,11 +24,11 @@
           (change)="changeContractAndDeviceType()"
           [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('groupId'), 'is-valid' : formFailedSubmit && !errorFields.includes('groupId')}">
           <option *ngFor="let group of sigfoxGroups" [value]="group.id">
-            {{group.name}}
+            {{group.sigFoxGroupData.name}}
           </option>
         </select>
   </div>
-  <div *ngIf="true">
+  <div *ngIf="iotDevice.sigfoxSettings.groupId">
     <div class="form-group mt-3 col-12">
       <mat-slide-toggle [(ngModel)]="iotDevice.sigfoxSettings.alreadyRegistered" id="alreadyRegistered" name="registeredAtSigfox">
         {{'QUESTION.SIGFOX.ALREADYREGISTERED' | translate}}</mat-slide-toggle>
@@ -59,6 +59,17 @@
           [(ngModel)]="iotDevice.sigfoxSettings.pac" maxlength="16"
           [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('pac'), 'is-valid' : formFailedSubmit && !errorFields.includes('pac')}">
       </div>
+      <div class="form-group mt-3 col-12">
+        <label class="form-label" for="deviceId">{{'QUESTION.SIGFOX.DEVICEID' | translate}}*</label>
+        <input type="text" id="deviceId" name="deviceId" maxLength="16"
+          [placeholder]="'QUESTION.SIGFOX.DEVICEID-PLACEHOLDER' | translate" class="form-control"
+          [(ngModel)]="iotDevice.sigfoxSettings.deviceId" maxlength="16"
+          [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('deviceId'), 'is-valid' : formFailedSubmit && !errorFields.includes('deviceId')}">
+      </div>
+      <div class="form-group mt-3 col-12">
+        <mat-slide-toggle [(ngModel)]="iotDevice.sigfoxSettings.prototype" id="prototype" name="prototype">
+          {{'QUESTION.SIGFOX.PROTOTYPE' | translate}}</mat-slide-toggle>
+      </div>
     </div>
     <div *ngIf="iotDevice.sigfoxSettings.alreadyRegistered">
       <div class="form-group mt-3 col-12">
@@ -73,10 +84,6 @@
           </select>
       </div>  
     </div>
-      <div class="form-group mt-3 col-12">
-        <mat-slide-toggle [(ngModel)]="iotDevice.sigfoxSettings.prototype" id="prototype" name="prototype">
-          {{'QUESTION.SIGFOX.PROTOTYPE' | translate}}</mat-slide-toggle>
-      </div>
     </div>
     <div *ngIf="!iotDevice.sigfoxSettings.groupId">
       <h3>{{'QUESTION.SIGFOX.SELECTGROUPFIRST' | translate}}</h3>
