IOT-271 refac service and small adjustments

--- a/src/app/sigfox/sigfox-administration/sigfox-administration-list/sigfox-administration-item/sigfox-administration-item.component.html
+++ b/src/app/sigfox/sigfox-administration/sigfox-administration-list/sigfox-administration-item/sigfox-administration-item.component.html
@@ -2,7 +2,7 @@
     <div class="row">
       <div class="col-9 pull-left d-flex align-items-center">
         <a [routerLink]="[sigfoxGroup.id]" class="container-fluid">
-          {{ sigfoxGroup.username }}
+          {{ sigfoxGroup.sigFoxGroupData.name }}
         </a>
       </div>
     </div>
