IOT-271 streamline naming

--- a/src/app/navbar/organisation-dropdown/sigfox-dropdown/sigfox-dropdown.component.html
+++ b/src/app/navbar/organisation-dropdown/sigfox-dropdown/sigfox-dropdown.component.html
@@ -22,7 +22,7 @@
         </li>
         <li class="nav-item">
             <a routerLink="/sigfox/profiles" routerLinkActive="active" class="nav-link pl-5 position-relative rounded">
-                {{'NAV.SIGFOX-PROFILES' | translate}}
+                {{'NAV.SIGFOX-DEVICE-TYPES' | translate}}
             </a>
             <fa-icon [icon]="faIdCard" class="navbar-icon"></fa-icon>
         </li>
