--- a/src/app/applications/iot-devices/iot-device-edit/sigfox-device-edit/sigfox-device-edit.component.html
+++ b/src/app/applications/iot-devices/iot-device-edit/sigfox-device-edit/sigfox-device-edit.component.html
@@ -5,27 +5,27 @@
   <div class="form-group mt-3 col-12">
     <label class="form-label" for="groupId">{{'QUESTION.SIGFOX.GROUPID' | translate}}*</label>
       <select id="groupId" class="form-select" name="groupId"
-        [(ngModel)]="iotDevice.sigFoxSettings.groupId" required
-        [value]="iotDevice.sigFoxSettings.groupId"
+        [(ngModel)]="iotDevice.sigfoxSettings.groupId" required
+        [value]="iotDevice.sigfoxSettings.groupId"
         (change)="onGroupChange()"
         [disabled]="editMode"
         [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('groupId'), 'is-valid' : formFailedSubmit && !errorFields.includes('groupId')}">
         <option *ngFor="let group of sigfoxGroups" [value]="group.id">
-          {{group.sigFoxGroupData.name}}
+          {{group.sigfoxGroupData.name}}
         </option>
       </select>
   </div>
-  <div *ngIf="iotDevice.sigFoxSettings.groupId">
+  <div *ngIf="iotDevice.sigfoxSettings.groupId">
     <div class="form-group mt-3 col-12" *ngIf="!editMode">
-      <mat-slide-toggle [(ngModel)]="iotDevice.sigFoxSettings.connectToExistingDeviceInBackend" id="connectToExistingDeviceInBackend" name="registeredAtSigfox">
+      <mat-slide-toggle [(ngModel)]="iotDevice.sigfoxSettings.connectToExistingDeviceInBackend" id="connectToExistingDeviceInBackend" name="registeredAtSigfox">
         {{'QUESTION.SIGFOX.CONNECTTOEXISTINGDEVICEINBACKEND' | translate}}</mat-slide-toggle>
     </div>
-    <div *ngIf="!iotDevice.sigFoxSettings.connectToExistingDeviceInBackend || editMode">
+    <div *ngIf="!iotDevice.sigfoxSettings.connectToExistingDeviceInBackend || editMode">
       <div class="form-group mt-3 col-12">
         <label class="form-label" for="deviceTypeId">{{'QUESTION.SIGFOX.DEVICETYPEID' | translate}}*</label>
         <select id="deviceTypeId" class="form-select" name="deviceTypeId"
-          [(ngModel)]="iotDevice.sigFoxSettings.deviceTypeId" required
-          [value]="iotDevice.sigFoxSettings.deviceTypeId"
+          [(ngModel)]="iotDevice.sigfoxSettings.deviceTypeId" required
+          [value]="iotDevice.sigfoxSettings.deviceTypeId"
           [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('deviceTypeId'), 'is-valid' : formFailedSubmit && !errorFields.includes('deviceTypeId')}">
           <option *ngFor="let deviceType of sigfoxDeviceTypes" [value]="deviceType.id">
             {{deviceType.name}}
@@ -36,7 +36,7 @@
         <label class="form-label" for="endProductCertificate">{{'QUESTION.SIGFOX.ENDPRODUCTCERTIFICATE' | translate}}*</label>
         <input type="text" id="endProductCertificate" name="endProductCertificate" maxLength="16"
           [placeholder]="'QUESTION.SIGFOX.ENDPRODUCTCERTIFICATE-PLACEHOLDER' | translate" class="form-control"
-          [(ngModel)]="iotDevice.sigFoxSettings.endProductCertificate"
+          [(ngModel)]="iotDevice.sigfoxSettings.endProductCertificate"
           [disabled]="editMode"
           [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('endProductCertificate'), 'is-valid' : formFailedSubmit && !errorFields.includes('endProductCertificate')}">
       </div>
@@ -44,7 +44,7 @@
         <label class="form-label" for="pac">{{'QUESTION.SIGFOX.PAC' | translate}}*</label>
         <input type="text" id="pac" name="pac" maxLength="16"
           [placeholder]="'QUESTION.SIGFOX.PAC-PLACEHOLDER' | translate" class="form-control"
-          [(ngModel)]="iotDevice.sigFoxSettings.pac" maxlength="16"
+          [(ngModel)]="iotDevice.sigfoxSettings.pac" maxlength="16"
           [disabled]="editMode"
           [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('pac'), 'is-valid' : formFailedSubmit && !errorFields.includes('pac')}">
       </div>
@@ -52,21 +52,21 @@
         <label class="form-label" for="deviceId">{{'QUESTION.SIGFOX.DEVICEID' | translate}}*</label>
         <input type="text" id="deviceId" name="deviceId" maxLength="16"
           [placeholder]="'QUESTION.SIGFOX.DEVICEID-PLACEHOLDER' | translate" class="form-control"
-          [(ngModel)]="iotDevice.sigFoxSettings.deviceId" maxlength="16"
+          [(ngModel)]="iotDevice.sigfoxSettings.deviceId" maxlength="16"
           [disabled]="editMode"
           [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('deviceId'), 'is-valid' : formFailedSubmit && !errorFields.includes('deviceId')}">
       </div>
       <div class="form-group mt-3 col-12">
-        <mat-slide-toggle [(ngModel)]="iotDevice.sigFoxSettings.prototype" [disabled]="editMode" id="prototype" name="prototype">
+        <mat-slide-toggle [(ngModel)]="iotDevice.sigfoxSettings.prototype" [disabled]="editMode" id="prototype" name="prototype">
           {{'QUESTION.SIGFOX.PROTOTYPE' | translate}}</mat-slide-toggle>
       </div>
     </div>
-    <div *ngIf="iotDevice.sigFoxSettings.connectToExistingDeviceInBackend && !editMode">
+    <div *ngIf="iotDevice.sigfoxSettings.connectToExistingDeviceInBackend && !editMode">
       <div class="form-group mt-3 col-12">
         <label class="form-label" for="deviceId">{{'QUESTION.SIGFOX.DEVICEID' | translate}}*</label>
           <select id="deviceId" class="form-select" name="deviceId"
-            [(ngModel)]="iotDevice.sigFoxSettings.deviceId" required
-            [value]="iotDevice.sigFoxSettings.deviceId"
+            [(ngModel)]="iotDevice.sigfoxSettings.deviceId" required
+            [value]="iotDevice.sigfoxSettings.deviceId"
             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('deviceId'), 'is-valid' : formFailedSubmit && !errorFields.includes('deviceId')}">
             <option *ngFor="let element of sigfoxDevices" [value]="element.id">
               {{element.name}}
@@ -74,7 +74,7 @@
           </select>
       </div>  
     </div>
-    <div *ngIf="!iotDevice.sigFoxSettings.groupId">
+    <div *ngIf="!iotDevice.sigfoxSettings.groupId">
       <h3>{{'QUESTION.SIGFOX.SELECTGROUPFIRST' | translate}}</h3>
     </div>
   </div>
