--- a/src/app/navbar/organisation-dropdown/sigfox-dropdown/sigfox-dropdown.component.html
+++ b/src/app/navbar/organisation-dropdown/sigfox-dropdown/sigfox-dropdown.component.html
@@ -14,7 +14,7 @@
     </mat-expansion-panel-header>
     <ul class="navbar-nav flex-column">
         <li class="nav-item">
-            <a routerLink="/sigfox/administration" routerLinkActive="active"
+            <a routerLink="/sigfox/sigfox-groups" routerLinkActive="active"
                 class="nav-link pl-5 position-relative rounded">
                 {{'NAV.SIGFOX-ADMIN' | translate}}
             </a>
