slet af gamle filer samt opdatering af design

--- a/src/app/sigfox/sigfox-groups-detail/sigfox-groups-detail.component.html
+++ b/src/app/sigfox/sigfox-groups-detail/sigfox-groups-detail.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="col-6">
             <button class="btn btn-primary float-right"
-                (click)="onNewGroup()">{{'SIGFOX.PROFILES.CREATE-NEW-DEVICE-TYPE' | translate}}</button>
+                (click)="onNewDeviceType()">{{'SIGFOX.PROFILES.CREATE-NEW-DEVICE-TYPE' | translate}}</button>
         </div>
     </div>
     <hr>
