--- a/src/app/sigfox/sigfox-groups-detail/sigfox-device-types-edit/sigfox-device-types-edit.component.html
+++ b/src/app/sigfox/sigfox-groups-detail/sigfox-device-types-edit/sigfox-device-types-edit.component.html
@@ -34,12 +34,12 @@
                 [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('description'), 'is-valid' : formFailedSubmit && !errorFields.includes('description')}">
         </div>
         <!-- Sigfox gruppe -->
-        <div class="form-group mt-3 col-12">
+        <div class="form-group mt-5 col-12">
             <mat-form-field appearance="fill">
-                <mat-label>{{'QUESTION.DATATARGET.SELECT-PAYLOADDECODER' | translate}}</mat-label>
+                <mat-label>{{'QUESTION.SIGFOX.DEVICETYPE.CHOOSE-GROUP' | translate}}</mat-label>
                 <mat-select matNativeControl name="groupId" [(ngModel)]="sigfoxDeviceType.groupId"
                     (selectionChange)="changedGroup()">
-                    <mat-option *ngFor="let group of sigfoxGroups" [value]="group.id">
+                    <mat-option *ngFor="let group of sigfoxGroups" [value]="sigfoxGroup.name">
                         {{group.sigfoxGroupData.name}}
                     </mat-option>
                 </mat-select>
@@ -49,7 +49,7 @@
         <div *ngIf="sigfoxDeviceType.groupId">
             <div class="form-group mt-3 col-12">
                 <mat-form-field appearance="fill">
-                    <mat-label>{{'QUESTION.DATATARGET.SELECT-PAYLOADDECODER' | translate}}</mat-label>
+                    <mat-label>{{'QUESTION.SIGFOX.DEVICETYPE.CHOOSE-CONTRACT' | translate}}</mat-label>
                     <mat-select matNativeControl name="contractId" [(ngModel)]="sigfoxDeviceType.contractId">
                         <mat-option *ngFor="let contract of sigfoxContracts" [value]="contract.id">
                             {{contract.name}}
