IOT-271 add service integration after refactor

--- a/src/app/sigfox/sigfox-groups-list/sigfox-groups-list-item/sigfox-groups-list-item.component.html
+++ b/src/app/sigfox/sigfox-groups-list/sigfox-groups-list-item/sigfox-groups-list-item.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-9 pull-left d-flex align-items-center justify-content-start">
 
-            <a [routerLink]="[sigfoxGroup.name]" class="container-fluid m-0">
+            <a [routerLink]="[sigfoxGroup.id]" class="container-fluid m-0">
                 <fa-icon [icon]="faToolbox" class=" icon--small mx-3"></fa-icon>
                 {{ sigfoxGroup.sigfoxGroupData.name }}
             </a>
