IOT-271 add headders

--- a/src/app/sigfox/sigfox-groups-detail/sigfox-groups-detail.component.html
+++ b/src/app/sigfox/sigfox-groups-detail/sigfox-groups-detail.component.html
@@ -1,4 +1,4 @@
-<app-top-bar [showSelectedSort]="false" [title]="'SIGFOX.PROFILES.NAME' | translate"></app-top-bar>
+<app-top-bar [showSelectedSort]="false" backButtonTitle="{{'SIGFOX.SIGFOX-GROUP' | translate}}" [title]="'SIGFOX.PROFILES.NAME' | translate"></app-top-bar>
 
 <div class=" jumbotron m-md-4 p-md-3">
     <div class="row mt-5">
