IOT-618 add semantic check for device type

--- a/src/app/applications/bulk-import/bulk-import.component.html
+++ b/src/app/applications/bulk-import/bulk-import.component.html
@@ -59,12 +59,12 @@
 
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef> {{ 'APPLICATION.BULK.NAME' | translate }} </th>
-            <td mat-cell *matCellDef="let element"> {{element.device.name}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.device?.name}} </td>
         </ng-container>
 
         <ng-container matColumnDef="type">
             <th mat-header-cell *matHeaderCellDef> {{ 'APPLICATION.BULK.TYPE' | translate }} </th>
-            <td mat-cell *matCellDef="let element"> {{element.device.type}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.device?.type}} </td>
         </ng-container>
 
         <ng-container matColumnDef="importStatus">
