IOT-630 fixed naming.

--- a/src/app/applications/datatarget/datatarget-edit/datatarget-edit.component.html
+++ b/src/app/applications/datatarget/datatarget-edit/datatarget-edit.component.html
@@ -1,7 +1,7 @@
-<app-form-header 
-    [backButton]="backButton" 
-    [title]="title">
-</app-form-header>
+<app-top-bar
+    backButtonTitle="{{backButtonTitle}}" 
+    title="{{title}}">
+</app-top-bar>
 
 <app-form-body-datatarget 
     [submitButton]="submitButton">
